# blog

./: LOG.md  README.md
backend/: .env.example  cli.py  config.py  main.py  pyproject.toml  start.sh
backend/data/: test.db
backend/domains/: posts.py
backend/infra/: db.py  posts.py
backend/routers/: dependencies.py  posts.py
backend/routers/schemas/: posts.py
backend/services/: blog_service.py
backend/test/: cli_sqlite.py  demo.py
backend/test/test_db/: init_db.py
blog-frontend/: package-lock.json  package.json
blog-frontend/src/lib/: api.ts  types.ts
blog-frontend/src/routes/: +page.svelte  +page.ts
blog-frontend/src/routes/admin/posts/[id]/edit/: +page.svelte
blog-frontend/src/routes/admin/posts/md-upload/: +page.svelte
blog-frontend/src/routes/admin/posts/new/: +page.svelte
blog-frontend/src/routes/posts/[slug]/: +page.svelte  +page.ts
content/: readme.md
content/2025/Oct/week4/20,Mon/: 在本地使用git裸仓库实现开发环境和测试环境隔离.md
content/2025/Oct/week5/: utc_log.md
content/2025/Oct/week5/31,Fri/: 从 Pip 到 UV：一站式 Python 包管理与依赖同步指南.md
docs/: 优秀的技术博客应该包含的内容.md
